--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <div class="about-container">
         <h2>About ClientCars.ng</h2>
         <p>
-            At <strong>ClientCars.ng</strong>, we believe renting a car should be simple, fast, and affordable.
+            At <strong>Car Rental</strong>, we believe renting a car should be simple, fast, and affordable.
             Whether you're heading to a business meeting, planning a weekend trip, or just need a ride for the day,
             we've got you covered with a wide range of well-maintained vehicles.
         </p>
@@ -69,7 +69,7 @@
 
         <p class="about-footer">
             Drive Lagos in style. Rent with confidence. <br />
-            Welcome to the smarter way to rent a car — welcome to <strong>ClientCars.ng</strong>.
+            Welcome to the smarter way to rent a car — welcome to <strong>Car Rental</strong>.
         </p>
     </div>
 </section>
