--- a/cars.html
+++ b/cars.html
@@ -64,7 +64,7 @@
 
             <!-- Car 3 -->
             <article class="car-card">
-                <img src="Hyundaicars.jpeg">
+                <img src="LEXIUS-FEATURED.webp">
                 <article class="content">
                     <h3>Hyundai Elantra 2019</h3>
                     <p>Manual • Yaba • Compact</p>
@@ -86,7 +86,7 @@
 
             <!-- Car 5 -->
             <article class="car-card">
-                <img src="LEXIUS-FEATURED.webp"lazy">
+                <img src="Hyundaicars.jpeg"lazy">
                 <article class="content" >
                     <h3>Lexus RX 350</h3>
                     <p>Luxury • Lekki Phase 1 • Auto</p>
@@ -146,6 +146,49 @@
                     <h3>Nissan Altima 2019</h3>
                     <p>Comfortable • Ikeja GRA • Auto</p>
                     <p class="price">₦17,000/day</p>
+                    <a onclick="window.location.href='book.html'" class="btn">Book Now</a>
+                </article>
+            </article>
+            <!-- Car 11 -->
+            <article class="car-card">
+                <img src="LEXIUS-FEATURED.webp" lazy">
+                <article class="content">
+                    <h3>Lexus RX 350</h3>
+                    <p>Luxury • Lekki Phase 1 • Auto</p>
+                    <p class="price">₦30,000/day</p>
+                    <a onclick="window.location.href='book.html'" class="btn">Book Now</a>
+                </article>
+            </article>
+
+            <!-- Car 12 -->
+            <article class="car-card">
+                <img src="Hyundaicars.jpeg">
+                <article class="content">
+                    <h3>Hyundai Elantra 2019</h3>
+                    <p>Manual • Yaba • Compact</p>
+                    <p class="price">₦13,500/day</p>
+                    <a onclick="window.location.href='book.html'" class="btn">Book Now</a>
+                </article>
+            </article>
+
+            <!-- Car 13 -->
+            <article class="car-card">
+                <img src="Toyota-Bus.jpeg" alt="Toyota Hiace" loading="lazy">
+                <article class="content">
+                    <h3>Toyota Hiace Bus</h3>
+                    <p>Group Trips • 12 Seater • A/C</p>
+                    <p class="price">₦40,000/day</p>
+                    <a onclick="window.location.href='book.html'" class="btn">Book Now</a>
+                </article>
+            </article>
+
+            <!-- Car 14 -->
+            <article class="car-card">
+                <img src="2025-toyota-featured1.webp" alt="Toyota Camry">
+                <article class="content">
+                    <h3>Toyota Camry 2021</h3>
+                    <p>Automatic • Ikeja • AC • 5-Seater</p>
+                    <p class="price">₦18,000/day</p>
                     <a onclick="window.location.href='book.html'" class="btn">Book Now</a>
                 </article>
             </article>
