--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 <!-- ABOUT SECTION -->
 <section class="about-section">
     <div class="about-container">
-        <h2>About ClientCars.ng</h2>
+        <h2>About Car Rental</h2>
         <p>
             At <strong>Car Rental</strong>, we believe renting a car should be simple, fast, and affordable.
             Whether you're heading to a business meeting, planning a weekend trip, or just need a ride for the day,
